--- a/search.html
+++ b/search.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <input type="text" placeholder="Enter the city name...">
+    <button id="city-search">search</button>
 </body>
 </html
