--- a/search.html
+++ b/search.html
@@ -4,9 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./search.css">
 </head>
 <body>
-    <input type="text" placeholder="Enter the city name...">
-    <button id="city-search">search</button>
+
+    <div class="searchfield">
+         <input type="text" placeholder="Enter the city name..." id="searchbox">
+         <button id="searchbtn">search</button>
+    </div>
+   
 </body>
 </html
