contetn.html and css file is also added

--- a/content.html
+++ b/content.html
@@ -4,8 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./content.css">
 </head>
 <body>
-    
+    <div class="container">
+        <div id="cityname">Madurai</div>
+        <div id="weatherimg">sunny</div>
+        <div id="deg">23°</div>
+        <div id="celsius"></div>
+        <div id="farenheit"></div>
+    </div>
 </body>
 </html>
